navbar overlap fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,6 +26,7 @@ html {
     background-color: black;
     position: fixed;
     width: 100%;
+    z-index: 9999;
 }
 
 .nav-links {
